--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mysql-live-select",
-  "version": "1.2.4",
+  "version": "1.2.5",
   "description": "Live updating MySQL SELECT statements",
   "main": "lib/LiveMysql.js",
   "repository": "https://github.com/vlasky/mysql-live-select",
@@ -17,11 +17,10 @@
   "author": "Ben Green <ben@latenightsketches.com>; Wen Jia Liu <wj32.64@gmail.com> (http://github.com/wj32); Vlad Lasky (http://github.com/vlasky)",
   "license": "MIT",
   "dependencies": {
-    "lodash": "^4.17.1",
-    "md5": "^2.0.0",
+    "lodash": "^4.17.15",
     "mysql2": "^v1.1.2",
-    "zongji": "^0.4.3",
-    "ejson": "^2.1.2"
+    "zongji": "git://github.com/vlasky/zongji.git#bb28724b4a889f35705cb140db6c4f88a5641b58",
+    "ejson": "^2.2.0"
   },
   "devDependencies": {
     "nodeunit": "^0.9.1"
