--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mysql-live-select",
+  "name": "@vlasky/mysql-live-select",
   "version": "1.2.10",
   "description": "Live updating MySQL SELECT statements",
   "main": "lib/LiveMysql.js",
