--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vlasky/mysql-live-select",
-  "version": "1.2.12",
+  "version": "1.2.13",
   "description": "Live updating MySQL SELECT statements",
   "main": "lib/LiveMysql.js",
   "repository": "https://github.com/vlasky/mysql-live-select",
@@ -19,7 +19,7 @@
   "dependencies": {
     "lodash": "^4.17.20",
     "mysql2": "^v2.2.5",
-    "zongji": "git://github.com/vlasky/zongji.git#4cbb058f395b884a3d7d11307819dab7a55c6804",
+    "@vlasky/zongji": "^0.5.1",
     "ejson": "^2.2.0"
   },
   "devDependencies": {
