--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vlasky/mysql-live-select",
-  "version": "1.2.14",
+  "version": "1.2.15",
   "description": "Live updating MySQL SELECT statements",
   "main": "lib/LiveMysql.js",
   "repository": "https://github.com/vlasky/mysql-live-select",
@@ -14,13 +14,13 @@
     "live",
     "update"
   ],
-  "author": "Ben Green <ben@latenightsketches.com>; Wen Jia Liu <wj32.64@gmail.com> (http://github.com/wj32); Vlad Lasky (http://github.com/vlasky)",
+  "author": "Vlad Lasky <github@vladlasky.com> (https://github.com/vlasky); Ben Green <ben@latenightsketches.com> (https://github.com/numtel); Wen Jia Liu <wj32.64@gmail.com> (https://github.com/wj32)",
   "license": "MIT",
   "dependencies": {
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "mysql2": "^v2.2.5",
-    "@vlasky/zongji": "^0.5.2",
-    "ejson": "^2.2.0"
+    "@vlasky/zongji": "^0.5.3",
+    "ejson": "^2.2.1"
   },
   "devDependencies": {
     "nodeunit": "^0.9.1"
