--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vlasky/mysql-live-select",
-  "version": "1.2.21",
+  "version": "1.2.20",
   "description": "Live updating MySQL SELECT statements",
   "main": "lib/LiveMysql.js",
   "repository": "https://github.com/vlasky/mysql-live-select",
@@ -22,7 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "lodash": "^4.17.21",
-    "@vlasky/mysql2": "^v2.2.7",
+    "mysql2": "^v2.2.5",
     "@vlasky/zongji": "^0.5.7",
     "ejson": "^2.2.1"
   },
