--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vlasky/mysql-live-select",
-  "version": "1.2.22",
+  "version": "1.2.23",
   "description": "Live updating MySQL SELECT statements",
   "main": "lib/LiveMysql.js",
   "repository": "https://github.com/vlasky/mysql-live-select",
@@ -22,9 +22,9 @@
   "license": "MIT",
   "dependencies": {
     "lodash": "^4.17.21",
-    "mysql2": "^v2.3.0",
+    "@vlasky/mysql2": "^v2.3.0",
     "@vlasky/zongji": "^0.5.8",
-    "ejson": "^2.2.1"
+    "ejson": "^2.2.2"
   },
   "devDependencies": {
     "nodeunit": "^0.9.1"
