--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "lodash": "^4.17.21",
-    "@vlasky/mysql2": "^v2.3.0",
+    "mysql2": "^v2.3.3",
     "@vlasky/zongji": "^0.5.8",
     "ejson": "^2.2.2"
   },
